--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     .controls { margin-bottom: 12px; display:flex; flex-wrap:wrap; gap:8px; }
     button { padding:6px 10px; border:none; border-radius:4px; cursor:pointer; }
     button.add { background:#2563eb; color:white; }
+    button.format { background:#6b7280; color:white; }
     input[type="date"] { padding:6px; }
 
     .clock {
@@ -25,23 +26,38 @@
       z-index: 1000;
     }
 
-    .table-wrap { overflow-x:auto; background:white; border-radius:6px; box-shadow:0 2px 6px rgba(0,0,0,0.1); }
+    .table-wrap {
+      overflow: auto; /* scroll both directions */
+      background:white;
+      border-radius:6px;
+      box-shadow:0 2px 6px rgba(0,0,0,0.1);
+      max-height: 80vh; /* keep on screen */
+    }
     table { border-collapse: collapse; width:max-content; min-width:700px; }
-    th, td { border:1px solid #ddd; padding:6px; text-align:center; vertical-align:middle; font-size:0.9rem; white-space:nowrap; }
-    th { background:#e5e7eb; position:sticky; top:0; z-index:2; }
+    th, td {
+      border:1px solid #ddd;
+      padding:6px;
+      text-align:center;
+      vertical-align:middle;
+      font-size:0.9rem;
+      white-space:nowrap;
+      background:white;
+    }
+    th { background:#e5e7eb; position:sticky; top:0; z-index:3; }
     td.name { text-align:left; }
 
-    /* sticky left columns */
-    th.sticky, td.sticky { position: sticky; left:0; background:white; z-index:3; }
-    th.sticky2, td.sticky2 { position: sticky; left:60px; background:white; z-index:3; }
-    th.sticky3, td.sticky3 { position: sticky; left:120px; background:white; z-index:3; }
+    /* freeze first 3 columns */
+    th.sticky, td.sticky { position: sticky; left:0; z-index:4; background:#f9fafb; }
+    th.sticky2, td.sticky2 { position: sticky; left:60px; z-index:4; background:#f9fafb; }
+    th.sticky3, td.sticky3 { position: sticky; left:120px; z-index:4; background:#f9fafb; }
 
-    thead tr:nth-child(2) th { background:#f9fafb; font-weight:normal; }
-    thead tr:nth-child(3) th { background:#fafafa; font-weight:normal; }
+    thead tr:nth-child(2) th { background:#f3f4f6; font-weight:normal; }
+    thead tr:nth-child(3) th { background:#f9fafb; font-weight:normal; }
 
     .present { background:#22c55e; color:white; }
     .late { background:#f59e0b; color:white; }
     .absent { background:#ef4444; color:white; }
+    .delete-btn { background:#ef4444; color:white; margin-left:5px; padding:2px 5px; font-size:0.75rem; }
   </style>
 </head>
 <body>
@@ -51,6 +67,7 @@
   <div class="controls">
     <input type="date" id="newDate" />
     <button class="add" onclick="addDate()">➕ Add Date</button>
+    <button class="format" onclick="toggleDateFormat()">📅 Change Date Format</button>
   </div>
 
   <div class="table-wrap">
@@ -86,7 +103,26 @@ const STUDENTS = [
 ];
 
 let dates = [];
-let attendanceData = {}; // {date: {roll: "Present"/"Absent"/"Late"/""}}
+let attendanceData = {}; 
+let dateFormat = 0; // 0=YYYY-MM-DD, 1=DD/MM/YYYY, 2=MMM DD, YYYY
+
+function formatDate(d){
+  const dateObj = new Date(d);
+  if(isNaN(dateObj)) return d;
+  if(dateFormat===0){
+    return d;
+  } else if(dateFormat===1){
+    return dateObj.toLocaleDateString("en-GB"); // DD/MM/YYYY
+  } else {
+    return dateObj.toLocaleDateString("en-US",{month:"short",day:"numeric",year:"numeric"});
+  }
+}
+
+function toggleDateFormat(){
+  dateFormat = (dateFormat+1)%3;
+  renderDates();
+  saveToStorage();
+}
 
 function renderStudents(){
   const tbody = document.getElementById('studentRows');
@@ -108,46 +144,59 @@ function addDate(date){
   if(!d){ alert("Please choose a date."); return; }
   if(dates.includes(d)){ alert("Date already added."); return; }
   dates.push(d);
+  dates.sort();
   attendanceData[d] = attendanceData[d] || {};
-
-  const dateIndex = dates.length - 1;
-
-  // header
-  const th = document.createElement('th');
-  th.textContent = d;
-  document.getElementById('headerRow').appendChild(th);
-
-  // counts row
-  const countTh = document.createElement('th');
-  countTh.textContent = "P:0 / A:0 / L:0";
-  document.getElementById('countRow').appendChild(countTh);
-
-  // student cells
-  document.querySelectorAll('#studentRows tr').forEach(tr=>{
-    const td = document.createElement('td');
-    const roll = tr.dataset.id;
-
-    const btn = document.createElement('button');
-    btn.textContent = "";
-    btn.onclick = ()=>{
-      cycleState(btn, d, roll);
-      updateSummary();
-      saveToStorage();
-    };
-
-    td.appendChild(btn);
-    tr.appendChild(td);
-  });
-
-  updateSummary();
+  renderDates();
   saveToStorage();
 }
 
-function cycleState(btn, d, roll){
+function renderDates(){
+  const headerRow = document.getElementById('headerRow');
+  const countRow = document.getElementById('countRow');
+  while(headerRow.cells.length > 3) headerRow.deleteCell(3);
+  while(countRow.cells.length > 3) countRow.deleteCell(3);
+  document.querySelectorAll('#studentRows tr').forEach(tr=>{
+    while(tr.cells.length > 3) tr.deleteCell(3);
+  });
+
+  dates.forEach(d=>{
+    const th = document.createElement('th');
+    th.innerHTML = formatDate(d) + ` <button class="delete-btn" onclick="deleteDate('${d}')">🗑</button>`;
+    headerRow.appendChild(th);
+
+    const countTh = document.createElement('th');
+    countTh.textContent = "P:0 / A:0 / L:0";
+    countRow.appendChild(countTh);
+
+    document.querySelectorAll('#studentRows tr').forEach(tr=>{
+      const td = document.createElement('td');
+      const roll = tr.dataset.id;
+      const btn = document.createElement('button');
+      btn.textContent = "";
+
+      btn.onclick = ()=>{
+        cycleState(btn, d, roll);
+        updateSummary();
+        saveToStorage();
+      };
+
+      td.appendChild(btn);
+      tr.appendChild(td);
+
+      if(attendanceData[d] && attendanceData[d][roll]){
+        cycleState(btn, d, roll, true);
+      }
+    });
+  });
+
+  updateSummary();
+}
+
+function cycleState(btn, d, roll, restore=false){
   const states = ["", "Present", "Late", "Absent"];
   let current = attendanceData[d][roll] || "";
   let idx = states.indexOf(current);
-  idx = (idx+1) % states.length;
+  if(!restore) idx = (idx+1) % states.length;
   let newState = states[idx];
   attendanceData[d][roll] = newState;
 
@@ -159,13 +208,10 @@ function cycleState(btn, d, roll){
 }
 
 function updateSummary(){
-  // update column counts
   dates.forEach((d, idx)=>{
     let p=0,a=0,l=0;
     document.querySelectorAll('#studentRows tr').forEach(tr=>{
-      const td = tr.cells[3+idx]; 
-      const btn = td.querySelector('button');
-      let val = attendanceData[d][tr.dataset.id] || "";
+      const val = attendanceData[d][tr.dataset.id] || "";
       if(val==="Present") p++;
       else if(val==="Absent") a++;
       else if(val==="Late") l++;
@@ -173,46 +219,48 @@ function updateSummary(){
     document.getElementById('countRow').cells[3+idx].textContent = `P:${p} / A:${a} / L:${l}`;
   });
 
-  // update per-student % present (Late not counted)
   document.querySelectorAll('#studentRows tr').forEach(tr=>{
     const roll = tr.dataset.id;
     let total = dates.length;
-    let present = 0;
+    let points = 0;
     dates.forEach(d=>{
-      if(attendanceData[d] && attendanceData[d][roll]==="Present") present++;
+      if(attendanceData[d]){
+        if(attendanceData[d][roll]==="Present") points += 1;
+        else if(attendanceData[d][roll]==="Late") points += 0.5;
+      }
     });
-    let percent = total>0 ? Math.round((present/total)*100) : 0;
+    let percent = total>0 ? Math.round((points/total)*100) : 0;
     tr.querySelector('.percent').textContent = percent+"%";
   });
+}
+
+function deleteDate(date){
+  if(confirm("Delete date "+formatDate(date)+" ?")){
+    dates = dates.filter(d=>d!==date);
+    delete attendanceData[date];
+    renderDates();
+    saveToStorage();
+  }
 }
 
 function saveToStorage(){
   localStorage.setItem("attendanceDates", JSON.stringify(dates));
   localStorage.setItem("attendanceData", JSON.stringify(attendanceData));
+  localStorage.setItem("dateFormat", dateFormat);
 }
 
 function loadFromStorage(){
   const savedDates = JSON.parse(localStorage.getItem("attendanceDates")||"[]");
   const savedData = JSON.parse(localStorage.getItem("attendanceData")||"{}");
+  const savedFormat = localStorage.getItem("dateFormat");
+  if(savedFormat!==null) dateFormat = parseInt(savedFormat);
   if(savedDates.length>0){
-    dates = [];
+    dates = savedDates.sort();
     attendanceData = savedData;
-    savedDates.forEach(d=>{
-      addDate(d);
-      // restore states
-      document.querySelectorAll('#studentRows tr').forEach(tr=>{
-        const roll = tr.dataset.id;
-        const td = tr.cells[3+dates.indexOf(d)];
-        const btn = td.querySelector('button');
-        if(attendanceData[d][roll]){
-          cycleState(btn, d, roll); // apply correct state
-        }
-      });
-    });
+    renderDates();
   }
 }
 
-// Live Date & Time
 function updateClock(){
   const now = new Date();
   const options = { weekday:'short', year:'numeric', month:'short', day:'numeric' };
@@ -223,7 +271,6 @@ function updateClock(){
 setInterval(updateClock, 1000);
 updateClock();
 
-// init
 renderStudents();
 loadFromStorage();
 </script>
